--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Apr 23 14:35:18 MDT 2015
-sdk.dir=C\:\\Users\\adam\\AppData\\Local\\Android\\sdk
+#Fri Apr 24 02:21:34 MDT 2015
+sdk.dir=C\:\\Users\\Christina\\AppData\\Local\\Android\\sdk1
